# ShutterScope

./: .gitignore  CLAUDE.md  README.md  debug_channels.py  pyproject.toml
.claude/: settings.json
.claude/plans/: oscilloscope-poc.md  pulse-width-measurement.md  three-point-shutter-testing.md  trim-waveform-to-pulse.md
src/shutterscope/: __main__.py  analysis.py  oscilloscope.py  oscilloscope_protocol.py  rigol_ds1000z.py  waveform.py  waveform_data.py
tests/: conftest.py  test_analysis.py  test_oscilloscope.py  test_rigol_ds1000z.py  test_waveform.py
