[project]
name = "shutterscope"
version = "0.1.0"
description = "Camera shutter tester using oscilloscope measurements"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyvisa>=1.14",
    "pyvisa-py>=0.7",
]

[project.scripts]
shutterscope = "shutterscope.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shutterscope"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RET", # flake8-return
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=shutterscope --cov-report=term-missing"
